0.8.1

  * don't try to set a fd-limit if the user didn't explicitly tried to raise it

0.8.0 

  * added a threaded event handling layer
  * added support to change the auth-response on the way to the backend
  * added timing infrastruture
  * added out-of-tree plugins builds and pkg-config support
  * fixed handling of broken length encoded data in resultsets
  * fixed version encoding in win32 (#45996)
  * fixed too small listen backlog() (#43278)
  * fixed configure check if flex is really installed (#45766)
  * fixed handling of >16M packets (#35202)
  * fixed parsing of invalid IP-addresses (#47273)
  * fixed off-by-one line-numbers in Lua stackstraces (#47348)

0.7.2 - 2009-06-30

  * fixed memory leak proxy plugin (#45272)
  * fixed ro-balance.lua (#45408)
  * added CMake build files
  * fixed portability issues for Win32
  * added mysql-proxy-svc on Win32
  * updated INSTALL file to cover all the build steps on win32

0.7.1 - 2009-05-15

  * fixed connection close at COM_REFRESH
  * moved plugins to lib/mysql-proxy/plugins
  * moved lua modules to lib/mysql-proxy/lua
  * moved libs to lib/
  * fixed detection of the base-dir for relative execs
  * fixed decoding of binlog.event_type on sparc
  * fixed build on freebsd and hpux

0.7.0 - 

  We changed the code-structure in 0.7.0:

  * split the code into a command-line interface (chassis) and 
    a library (proxy-core)
  * moved the proxy and the admin code into plugins
  * added a library and cmdline interface to dump binlogs incl. MySQL 5.1 RBR
  * added mysql-myisam-dump to dump the content of a .FRM files and .MYD files

  Details on the different sections are in the ChangeLog

0.6.1 - 

  * added new features to run-tests.lua (see README.TESTS)
  * fixed error handling for socket functions on win32
  * fixed sending fake server-greetings in connect_server()
  * fixed assert()ions on write-errors 

0.6.0 - 2007-09-11

  * added --no-daemon and --pid-file
  * added --no-proxy to disable the proxy 